css/style.css
.login {
    background-color: #333;
    color: #fff;
    padding: 3px 10px 3px 10px;
    font-size: 10px;
}

.login input[type="text"] {
    height: 16px;
    width: 100px;
    border: 1px solid #999;
    vertical-align: bottom;
    box-shadow: 0 0 1px #666 inset;
}

.login input[type="password"] {
    height: 16px;
    width: 100px;
    border: 1px solid #999;
    vertical-align: bottom;
    box-shadow: 0 0 1px #666 inset;
}

.login input[type="submit"] {
    border: 1px solid #999;
    height: 16px;
    vertical-align: bottom;
    font-size: 10px;
}

.title img {
    text-align: center;
    max-width: 100%;
}

.menu {
    background-color: #333;
    color: #fff;
}

.menu ul {
    list-style-type: none;
}

.menu li {
    display: inline;
    color: #fff;
    padding: 3px;
}

.menu li a {
    color: #fff;
    text-decoration: none;
}

